# xirhxq_cbf

./: CBF.cpp  CBF.h  CMakeLists.txt  CVT.cpp  CVT.h  CVT.m  Energy_CBF.cpp  Energy_CBF.h  First_Order_UGV.cpp  First_Order_UGV.h  Gurobi_test.cpp  Line.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Robot.cpp  Robot.h  Swarm.cpp  Swarm.h  World.cpp  World.h  XIRHXQ_CVT.m  XIRHXQ_Line.m  XIRHXQ_Point.m  XIRHXQ_Polygon.m  XIRHXQ_Robot.m  XIRHXQ_Robot_v1.m  XIRHXQ_cbf_main.cpp  XIRHXQ_coverage_control.m  XIRHXQ_cvt_main.cpp  cbf_main.cpp  centroid_of_density.m  coverage_control.m  draw.py  generate_initial_positions.m  json_test.cpp  readfile.py  (+8 more)
computing_geometry/: CVT.h  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h
cpp/: CMakeLists.txt  Line.cpp  Line.h  Point.h  Polygon.cpp  Polygon.h  Robot.cpp  Swarm.cpp  Swarm.h  main.cpp  utils.h
cpp_file/: XIRHXQ_CVT.cpp  XIRHXQ_CVT.h  XIRHXQ_Line.cpp  XIRHXQ_Line.h  XIRHXQ_Point.cpp  XIRHXQ_Point.h  XIRHXQ_Polygon.cpp  XIRHXQ_Polygon.h  XIRHXQ_Robot.cpp  XIRHXQ_Robot.h  XIRHXQ_Swarm.cpp  XIRHXQ_Swarm.h  main.cpp
matlab_file/: plot_data.m
python/: draw_gif.py
python_file/: learning_mpl.py  plot_data.py  test.py
